[tool.poetry]
name = "pyweek-33"
version = "0.1.0"
description = ""
authors = ["Cat Devs <https://github.com/cat-dev-group>"]

[tool.poetry.dependencies]
python = ">=3.6"
Panda3D = "1.10.11"
ursina = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
