[tool.poetry]
name = "pyweek-33"
version = "0.1.0"
description = ""
authors = ["Cat Devs <https://github.com/cat-dev-group>"]

[tool.poetry.dependencies]
python = "^3.9"
pyglet = "^1.5.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.1.0"
pre-commit = "^2.17.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
